// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkLists mounts correctly without bookamrks 1`] = `
<BookmarkLists
  bookmarks={Array []}
  error={Object {}}
  getBookmarks={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  isLoading={false}
>
  <div
    className="post-lists"
  >
    <p>
      You have no bookmarks
    </p>
  </div>
</BookmarkLists>
`;

exports[`BookmarkLists mounts correctly without image 1`] = `
<BookmarkLists
  bookmarks={
    Array [
      Object {
        "body": "Another cgdsibcod cwdjcb djcubd cjdbc jdwbcikcuic dBody",
        "createdAt": "",
        "description": "Emmawkfvgwbvu wubvw djkvhis article",
        "id": "2345rfghujhjk",
        "imageThumbnail": "",
        "readTime": "0",
        "slug": "Hello-Article-1-db9cwefifhcoiwnf2e4-4d31-9015-288cf41d4092",
        "title": "EMMSDefqefrticle",
        "userId": "5a6fab9c-4wf9-4bwef5-973c-5a371165cd57",
      },
    ]
  }
  error={Object {}}
  getBookmarks={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  isLoading={false}
>
  <div
    className="post-lists"
  >
    <ItemGroup
      key="2345rfghujhjk"
    >
      <div
        className="ui items"
      >
        <Item>
          <div
            className="item"
          >
            <ItemImage
              src="https://react.semantic-ui.com/images/wireframe/image.png"
            >
              <Image
                as="img"
                src="https://react.semantic-ui.com/images/wireframe/image.png"
                ui={false}
                wrapped={true}
              >
                <div
                  className="image"
                >
                  <img
                    src="https://react.semantic-ui.com/images/wireframe/image.png"
                  />
                </div>
              </Image>
            </ItemImage>
            <ItemContent>
              <div
                className="content"
              >
                <div
                  className="d-flex"
                >
                  <div
                    style={
                      Object {
                        "marginRight": "auto",
                      }
                    }
                  >
                    <Title
                      className="title-article-lg"
                      content="EMMSDefqefrticle"
                    >
                      <h1
                        className="title title-article-lg"
                      >
                        EMMSDefqefrticle
                      </h1>
                    </Title>
                  </div>
                  <div
                    style={
                      Object {
                        "marginRight": "0.8rem",
                      }
                    }
                  >
                    <p
                      style={
                        Object {
                          "fontSize": "1rem",
                          "width": "100%",
                        }
                      }
                    >
                      0
                       mins read
                    </p>
                  </div>
                </div>
                <ItemDescription
                  style={
                    Object {
                      "marginBottom": "auto",
                    }
                  }
                >
                  <div
                    className="description"
                    style={
                      Object {
                        "marginBottom": "auto",
                      }
                    }
                  >
                    <p
                      style={
                        Object {
                          "fontSize": "1.125rem",
                          "fontWeight": "200",
                          "lineHeight": "1.375rem",
                        }
                      }
                    >
                      Emmawkfvgwbvu wubvw djkvhis article
                    </p>
                  </div>
                </ItemDescription>
                <ItemExtra>
                  <div
                    className="extra"
                  >
                    <div
                      className="d-flex justify-content-between"
                    >
                      <p
                        style={
                          Object {
                            "fontSize": "1rem",
                          }
                        }
                      >
                        Invalid date
                      </p>
                      <div>
                        <div>
                          <Button
                            className="btn-transparent"
                            type="button"
                            value={
                              <Icon
                                as="i"
                                name="bookmark"
                                style={
                                  Object {
                                    "color": "#000000",
                                    "fontSize": "1.25rem",
                                    "margin": "0",
                                  }
                                }
                              />
                            }
                          >
                            <button
                              className="btn btn-transparent"
                              type="button"
                            >
                              <Icon
                                as="i"
                                name="bookmark"
                                style={
                                  Object {
                                    "color": "#000000",
                                    "fontSize": "1.25rem",
                                    "margin": "0",
                                  }
                                }
                              >
                                <i
                                  aria-hidden="true"
                                  className="bookmark icon"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontSize": "1.25rem",
                                      "margin": "0",
                                    }
                                  }
                                />
                              </Icon>
                            </button>
                          </Button>
                        </div>
                      </div>
                    </div>
                  </div>
                </ItemExtra>
              </div>
            </ItemContent>
          </div>
        </Item>
      </div>
    </ItemGroup>
  </div>
</BookmarkLists>
`;

exports[`BookmarkLists should render correctly 1`] = `
<BookmarkLists
  bookmarks={
    Array [
      Object {
        "body": "Another cgdsibcod cwdjcb djcubd cjdbc jdwbcikcuic dBody",
        "createdAt": "",
        "description": "Emmawkfvgwbvu wubvw djkvhis article",
        "id": "2345rfghujhjk",
        "imageThumbnail": "https://dummy.jpg",
        "readTime": "0",
        "slug": "Hello-Article-1-db9cwefifhcoiwnf2e4-4d31-9015-288cf41d4092",
        "title": "EMMSDefqefrticle",
        "userId": "5a6fab9c-4wf9-4bwef5-973c-5a371165cd57",
      },
    ]
  }
  error={Object {}}
  getBookmarks={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  isLoading={false}
>
  <div
    className="post-lists"
  >
    <ItemGroup
      key="2345rfghujhjk"
    >
      <div
        className="ui items"
      >
        <Item>
          <div
            className="item"
          >
            <ItemImage
              src="https://dummy.jpg"
            >
              <Image
                as="img"
                src="https://dummy.jpg"
                ui={false}
                wrapped={true}
              >
                <div
                  className="image"
                >
                  <img
                    src="https://dummy.jpg"
                  />
                </div>
              </Image>
            </ItemImage>
            <ItemContent>
              <div
                className="content"
              >
                <div
                  className="d-flex"
                >
                  <div
                    style={
                      Object {
                        "marginRight": "auto",
                      }
                    }
                  >
                    <Title
                      className="title-article-lg"
                      content="EMMSDefqefrticle"
                    >
                      <h1
                        className="title title-article-lg"
                      >
                        EMMSDefqefrticle
                      </h1>
                    </Title>
                  </div>
                  <div
                    style={
                      Object {
                        "marginRight": "0.8rem",
                      }
                    }
                  >
                    <p
                      style={
                        Object {
                          "fontSize": "1rem",
                          "width": "100%",
                        }
                      }
                    >
                      0
                       mins read
                    </p>
                  </div>
                </div>
                <ItemDescription
                  style={
                    Object {
                      "marginBottom": "auto",
                    }
                  }
                >
                  <div
                    className="description"
                    style={
                      Object {
                        "marginBottom": "auto",
                      }
                    }
                  >
                    <p
                      style={
                        Object {
                          "fontSize": "1.125rem",
                          "fontWeight": "200",
                          "lineHeight": "1.375rem",
                        }
                      }
                    >
                      Emmawkfvgwbvu wubvw djkvhis article
                    </p>
                  </div>
                </ItemDescription>
                <ItemExtra>
                  <div
                    className="extra"
                  >
                    <div
                      className="d-flex justify-content-between"
                    >
                      <p
                        style={
                          Object {
                            "fontSize": "1rem",
                          }
                        }
                      >
                        Invalid date
                      </p>
                      <div>
                        <div>
                          <Button
                            className="btn-transparent"
                            type="button"
                            value={
                              <Icon
                                as="i"
                                name="bookmark"
                                style={
                                  Object {
                                    "color": "#000000",
                                    "fontSize": "1.25rem",
                                    "margin": "0",
                                  }
                                }
                              />
                            }
                          >
                            <button
                              className="btn btn-transparent"
                              type="button"
                            >
                              <Icon
                                as="i"
                                name="bookmark"
                                style={
                                  Object {
                                    "color": "#000000",
                                    "fontSize": "1.25rem",
                                    "margin": "0",
                                  }
                                }
                              >
                                <i
                                  aria-hidden="true"
                                  className="bookmark icon"
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontSize": "1.25rem",
                                      "margin": "0",
                                    }
                                  }
                                />
                              </Icon>
                            </button>
                          </Button>
                        </div>
                      </div>
                    </div>
                  </div>
                </ItemExtra>
              </div>
            </ItemContent>
          </div>
        </Item>
      </div>
    </ItemGroup>
  </div>
</BookmarkLists>
`;
